package observer;

public interface DossierObserver {
    void update(Bericht bericht);
}